# bot_base

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/bot_base/: __init__.py  bot.py  config.json
src/bot_base/cogs/: fun.py  general.py  moderation.py  owner.py  template.py
src/bot_base/database/: data.db  models.py
src/bot_base/exceptions/: __init__.py
src/bot_base/helpers/: checks.py  db_manager.py  prompts.py
tests/: test_bot_base.py
