[tool.poetry]
name = "bot_base"
version = "0.1.0"
description = "A bot base"
authors = ["Dylan Garrett"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
discord = "^2.1.0"
sqlalchemy = "^2.0.3"
aiosqlite = "^0.18.0"
inquirerpy = "^0.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
